feat(balance): add balance update
